Add JVM params for elastic search to pom file